# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-workflow.yml
gendiff/: __init__.py
gendiff/lib/: funcs.py  json_like.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
help_schemes/: block-scheme-logic-task06.drawio
tests/: test_gendiff.py
