[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["modemfux <modemfux@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
